data/derived/comb/progs/unify/prog6933.ml.out
Characters 46-47:
  in wwhile (2,b);;
             ^
Error: This expression has type int but an expression was expected of type
         'a -> 'a * bool
